--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,6 +40,7 @@
     <string name="enter_your_password">Enter your password</string>
     <string name="accetta_le_condizioni">Accetta le condizioni</string>
     <string name="login">LOGIN</string>
+    <string name="confirm">CONFERMA</string>
     <string name="login_title">Accedi</string>
     <string name="ricorda_le_credenziali">Ricorda le credenziali</string>
     <string name="biometric_authentication">Biometric Authentication</string>
